add flexbox, credit to me, styling, modular font sizes, etc

--- a/index.html
+++ b/index.html
@@ -16,39 +16,38 @@
 <body>
 
 	<div class="ui container">
+
 		<div class="ui raised segment">
 			
-		<label class="ui basic label">8008135</label>
+			<label class="ui basic label">8008135</label>
 
-		<div class="columns">
-			
-			<div class="leftColumn">
+			<div class="buttons">
+				
 				<button class="ui red button">AC</button>
 				<button class="ui red button">CE</button>
+				<button class="ui red button"><i class="arrow left icon"></i></button>
+				<button class="ui blue button">/</button>
 				<button class="ui green button">7</button>
 				<button class="ui green button">8</button>
+				<button class="ui green button">9</button>
+				<button class="ui blue button">*</button>
 				<button class="ui green button">4</button>
 				<button class="ui green button">5</button>
+				<button class="ui green button">6</button>
+				<button class="ui blue button">-</button>
 				<button class="ui green button">1</button>
 				<button class="ui green button">2</button>
-				<button class="ui green button">0</button>
-			</div>
-
-			<div class="rightColumn">
-				<button class="ui blue button">&divide;</button>
-				<button class="ui green button">9</button>
-				<button class="ui green button">6</button>
 				<button class="ui green button">3</button>
-				<button class="ui green button">.</button>
-				<button class="ui blue button">x</button>
-				<button class="ui blue button">-</button>
 				<button class="ui blue button">+</button>
-				<button class="ui blue button">=</button>				
+				<button class="ui green button">0</button>
+				<button class="ui green button">.</button>
+				<button class="ui blue button" id="equals">=</button>				
+
 			</div>
 
 		</div>
 
-		</div>
+		<footer>Designed &amp; developed by <a href="http://www.jaketripp.com" target="_blank">Jake Tripp</a></footer>
 	</div>
 
 	
