fix footer line height, fix flex grow on equals sign

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 		<div class="ui raised segment">
 			
-			<label class="ui basic label">8008135</label>
+			<label class="ui basic label">5318008</label>
 
 			<div class="buttons">
 				
@@ -47,7 +47,7 @@
 
 		</div>
 
-		<footer>Designed &amp; developed by <a href="http://www.jaketripp.com" target="_blank">Jake Tripp</a></footer>
+		<footer>Designed &amp; developed<br/>by <a href="http://www.jaketripp.com" target="_blank">Jake Tripp</a></footer>
 	</div>
 
 	
