start on JS now, add some basic click event stuff

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
 		<div class="ui raised segment">
 			
-			<label class="ui basic label">5318008</label>
+			<label class="ui basic label">0</label>
 
 			<div class="buttons">
 				
-				<button class="ui red button">AC</button>
+				<button class="ui red button" id="reset">C</button>
 				<button class="ui red button">CE</button>
 				<button class="ui red button"><i class="arrow left icon"></i></button>
 				<button class="ui blue button">/</button>
