--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				
 				<button class="ui red button" id="reset">C</button>
 				<button class="ui red button">CE</button>
-				<button class="ui red button"><i class="arrow left icon"></i></button>
+				<button class="ui red button" id="backspace"><i class="arrow left icon"></i></button>
 				<button class="ui blue button">/</button>
 				<button class="ui green button">7</button>
 				<button class="ui green button">8</button>
