DOM functionality almost working

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 
 		<div class="ui raised segment">
 			
-			<label class="ui basic label">0</label>
+			<div class="ui basic label">
+				<div id="screen">0</div>
+				<div id="chain">0</div>
+			</div>
 
 			<div class="buttons">
 				
