add max digits popup, add chain DOM, split up functions into better pieces

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 		<div class="ui raised segment">
 			
-			<div class="ui basic label">
+			<div class="ui basic label" data-content="Maximum digits exceeded (8)" data-variation="inverted" data-position="bottom right">
 				<div id="screen">0</div>
 				<div id="chain">0</div>
 			</div>
@@ -50,7 +50,11 @@
 
 		</div>
 
-		<footer>Designed &amp; developed<br/>by <a href="http://www.jaketripp.com" target="_blank">Jake Tripp</a></footer>
+		<footer>
+			Designed &amp; developed<br/>
+			by <a href="http://www.jaketripp.com" target="_blank">Jake Tripp</a>
+		</footer>
+
 	</div>
 
 	
