make popup huge, fix centering of .label

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 		<div class="ui raised segment">
 			
-			<div class="ui basic label" data-content="Maximum digits exceeded (8)" data-variation="inverted" data-position="bottom right">
+			<div class="ui basic label" data-content="Maximum digits exceeded (8)" data-variation="huge inverted" data-position="bottom right">
 				<div id="screen">0</div>
 				<div id="chain">0</div>
 			</div>
