finishing CE button, almost there

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div class="buttons">
 				
 				<button class="ui red button" id="reset">C</button>
-				<button class="ui red button">CE</button>
+				<button class="ui red button" id="clearScreen">CE</button>
 				<button class="ui red button" id="backspace"><i class="arrow left icon"></i></button>
 				<button class="ui blue button">/</button>
 				<button class="ui green button">7</button>
