--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
 				<button class="ui red button" id="clearScreen">CE</button>
 				<button class="ui red button" id="backspace"><i class="arrow left icon"></i></button>
 				<button class="ui blue button">/</button>
-				<button class="ui green button">7</button>
-				<button class="ui green button">8</button>
-				<button class="ui green button">9</button>
+				<button class="ui green button numbers">7</button>
+				<button class="ui green button numbers">8</button>
+				<button class="ui green button numbers">9</button>
 				<button class="ui blue button">*</button>
-				<button class="ui green button">4</button>
-				<button class="ui green button">5</button>
-				<button class="ui green button">6</button>
+				<button class="ui green button numbers">4</button>
+				<button class="ui green button numbers">5</button>
+				<button class="ui green button numbers">6</button>
 				<button class="ui blue button">-</button>
-				<button class="ui green button">1</button>
-				<button class="ui green button">2</button>
-				<button class="ui green button">3</button>
+				<button class="ui green button numbers">1</button>
+				<button class="ui green button numbers">2</button>
+				<button class="ui green button numbers">3</button>
 				<button class="ui blue button">+</button>
-				<button class="ui green button">0</button>
-				<button class="ui green button">.</button>
+				<button class="ui green button numbers">0</button>
+				<button class="ui green button" id="decimal">.</button>
 				<button class="ui blue button" id="equals">=</button>				
 
 			</div>
